# urubu

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  debian.Dockerfile  generate_python_proto.sh  run.sh
benches/: benches.rs
proto/: Cargo.toml
proto/src/: build.rs
proto/src/protos/: network.proto  network.rs
src/: bitboard_move.rs  build.rs  generator.rs  lib.rs  main.rs
src/abts/: ab_search.rs  mod.rs
src/advanced/: attack_info.rs  bitboard_move.rs  board.rs  board_factory.rs  board_state.rs  game.rs  mod.rs  move_generation.rs  move_list.rs  perft.rs  position.rs  zobrist_key.rs
src/cached/: attack_info.rs  board.rs  board_factory.rs  mod.rs  move_generation.rs  perft.rs
src/eval/: eval_constants.rs  evaluator.rs  mod.rs
src/generator/: bitboard_generator.rs  mod.rs  zobrist_generator.rs
src/mcts/: cache.rs  node.rs
src/movegen/: attack_info.rs  bitboard_move.rs  board.rs  board_state.rs  generator.rs  magic.rs  mod.rs
src/simplified/: game.rs  mod.rs  move_generation.rs  perft.rs  position.rs  position_state.rs
src/types/: bitboard.rs  board.rs  board_move.rs  board_state.rs  castling_rights.rs  color.rs  file.rs  game.rs  magic.rs  mod.rs  move_list.rs  move_type.rs  piece.rs  piece_type.rs  rank.rs  square.rs  zobrist_key.rs
src/utils/: file_writer.rs  mod.rs  random.rs
training/: dataset.py  encoding.py  main.py  network.py  network_pb2.py  requirements.txt  training_config.py
training/config/: example.yaml
training/input_sample/: sample.csv
training/tests/: FenToSimpleBitboardEncoderTest.py
training/validation_sample/: sample.csv
