[package]
name = "urubu"
version = "0.1.0"
authors = ["Ratosh <ratosh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
opt-level = 3
debug = true

[dependencies]
lazy_static = "1.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
