[package]
name = "urubu"
version = "0.1.0"
authors = ["Ratosh <ratosh@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
debug = true

[profile.test]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true

[dependencies]
proto = {path = "proto"}